AvaTax4ServiceMax/src/objects/Avalara__c.object
<CustomObject>
    <description>Object to store Avalara Credentials and Avalara options</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <inlineHelpText>Avalara Account ID</inlineHelpText>
        <label>Account ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Avalara_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field shows the status of this account. If the field is checked, the account is enabled. Only one account can be enabled at a time.</inlineHelpText>
        <label>Active Avalara Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Tax_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>UnChecked by default. If this Box is checked AND Tax Calculations are Enabled, Tax may be recalculated upon Saving the Quote or Work Order(recalculation will only be done if a value which might affect the tax calculation has changed)</inlineHelpText>
        <label>Re-calculate Tax upon Invoice Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_On_Status__c</fullName>
        <inlineHelpText>If Re-calculate Tax upon Invoice Editing is Checked, and the Order Status (Work Order ) is set to correspond to the value set in Post WorkOrder Status , the Invoice will be Committed to Avalara upon Save, provided Disable Document Commit is unchecked.</inlineHelpText>
        <label>Post WorkOrder on Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>Default Company Code for Avalara Tax Calcs - may be overridden at WorkOrder or ServiceQuote</description>
        <inlineHelpText>Dashboard Company Code that will be referenced in Tax Calculations for this TaxNowSetting Object.</inlineHelpText>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Country for Origin Address used in Avalara Tax Calcs. Enter 2 or 3 character ISO country code.</inlineHelpText>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code_Field__c</fullName>
        <inlineHelpText>This is the field from which the Tax Calculation will pull the Avalara Customer Code.</inlineHelpText>
        <label>Customer Code Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Name</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disable_Document_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then tax gets calculated on Work Order, however transaction is not saved on Avalara Dashboard.</description>
        <inlineHelpText>If checked then tax gets calculated on Work Order, however transaction is not saved on Avalara Dashboard.</inlineHelpText>
        <label>Disable Document Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_AvaTax_Tax_Calculation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables Tax Calcs for Avalara</description>
        <inlineHelpText>Checked by default. If unchecked, Sales Tax Calculation is disabled.</inlineHelpText>
        <label>Enable AvaTax Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_AvaTax_address_validation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked by default. If unchecked, Address Validations are disabled.</inlineHelpText>
        <label>Enable AvaTax Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <inlineHelpText>Avalara License Key</inlineHelpText>
        <label>License Key</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_City__c</fullName>
        <inlineHelpText>City for Origin Address to be used in Avalara Tax Calculations</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Postal_Code__c</fullName>
        <inlineHelpText>Postal or Zip Code for Origin Address to be used in tax Calculations. For US Zip Codes can be Zip5 or Zip9 (Zip + 4)</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_State__c</fullName>
        <inlineHelpText>State or Province for Origin Address to be used in Avalara Tax Calcs. Use 2 character abbreviations as specified by US or Canada Postal Service.</inlineHelpText>
        <label>State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Street__c</fullName>
        <inlineHelpText>Enter up to 3 Street Address lines for the Origin Address to be used in the Avalara Tax Calcs. More lines can be entered, but only the first 3 will be used in tax Calculations.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Return_address_in_upper_case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then validated address result showcase would be in upper case.</description>
        <inlineHelpText>If checked then address validation result  would be in upper case.</inlineHelpText>
        <label>Return Address in Upper Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_URL__c</fullName>
        <inlineHelpText>URL to use when calling the Avalara Service. Example: https://avatax.avalara.net</inlineHelpText>
        <label>Service URL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>https://avatax.avalara.net</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>https://development.avalara.net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Limit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Trigger Limit</description>
        <inlineHelpText>This is the Max # of Records that Can be processed by a TaxNow Trigger in a single Update or Insert Operation.   Bulk Update or Insert Ops that Exceed this limit will not fire any Triggered Ops (such as autocalc).  Reccomended Setting is 1.</inlineHelpText>
        <label>Trigger Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_Validated_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, The user has the opportunity to say yes or no to replacing an address with its validated version before the replacement occurs. If not checked, the replacement happens without intervention.</inlineHelpText>
        <label>Verify Validated Addresses</label>
        <type>Checkbox</type>
    </fields>
    <label>Avalara Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Avalara Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Avalara</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NOBlank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Customer_Code_Field__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Customer_Code_Field__c</errorDisplayField>
        <errorMessage>Blank Value Not Allowed</errorMessage>
    </validationRules>
</CustomObject>